--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "react-native-use-form",
+  "name": "react-slim-use-form",
   "description": "A form validation library implemented by React Hooks.",
   "version": "1.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "build": "rm -rf ./lib && tsc",
+    "build": "rm -rf ./dist && tsc",
     "prepare": "yarn build"
   },
   "author": "toshi1127 (https://github.com/toshi1127)",
